@@ -5,9 +5,10 @@ import ap.student.project.backend.dao.QuestionRepository;
 import ap.student.project.backend.dto.ExamDTO;
 import ap.student.project.backend.dto.QuestionDTO;
 import ap.student.project.backend.entity.Exam;
+import ap.student.project.backend.entity.Training;
 import ap.student.project.backend.entity.Question;
-import ap.student.project.backend.entity.QuestionType;
 import ap.student.project.backend.exceptions.ListFullException;
+import ap.student.project.backend.exceptions.MissingArgumentException;
 import ap.student.project.backend.exceptions.NotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,15 +17,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class ExamServiceTest {
+class ExamServiceTest {
 
     @Mock
     private ExamRepository examRepository;
@@ -32,113 +32,109 @@ public class ExamServiceTest {
     @Mock
     private QuestionRepository questionRepository;
 
+    @Mock
+    private TrainingService trainingService;
+
     @InjectMocks
     private ExamService examService;
 
-    private Exam exam;
     private ExamDTO examDTO;
-    private QuestionDTO questionDTO;
-    private Question question;
+    private Exam exam;
+    private Training training;
 
     @BeforeEach
     void setUp() {
+        examDTO = new ExamDTO(1, 1, 1, 1, 1); // Assuming trainingId is needed
         exam = new Exam();
-        exam.setId(1);
-        exam.setMaxAttempts(3);
-        exam.setPassingScore(60);
-        exam.setQuestionAmount(5);
-        exam.setTime(60);
-        exam.setQuestions(new ArrayList<>());
-
-        examDTO = new ExamDTO(60, 3, 60, 5, 1);
-
-        questionDTO = new QuestionDTO(null, QuestionType.MULTIPLE_CHOICE, null);
-
-        question = new Question();
-        question.setQuestionType(QuestionType.MULTIPLE_CHOICE);
+        training = new Training();
     }
 
     @Test
-    void testSave() {
-        when(examRepository.save(any(Exam.class))).thenReturn(exam);
+    void save_ShouldThrowException_WhenTrainingIdIsZero() {
+        ExamDTO invalidDTO = new ExamDTO(1, 1, 1, 1, 0);
+        assertThrows(MissingArgumentException.class, () -> examService.save(invalidDTO));
+    }
+
+    @Test
+    void save_ShouldThrowException_WhenTrainingNotFound() {
+        when(trainingService.findById(1)).thenReturn(null);
+        assertThrows(NotFoundException.class, () -> examService.save(examDTO));
+    }
+
+    @Test
+    void save_ShouldSaveExam_WhenValidDTOIsProvided() {
+        when(trainingService.findById(1)).thenReturn(training);
+
         examService.save(examDTO);
+
+        verify(trainingService, times(1)).findById(1);
         verify(examRepository, times(1)).save(any(Exam.class));
     }
 
     @Test
-    void testFindByIdFound() {
-        when(examRepository.findById(1)).thenReturn(Optional.of(exam));
-        Exam result = examService.findById(1);
-        assertNotNull(result);
-        assertEquals(1, result.getId());
-    }
-
-    @Test
-    void testFindByIdNotFound() {
+    void findById_ShouldThrowException_WhenExamNotFound() {
         when(examRepository.findById(1)).thenReturn(Optional.empty());
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> examService.findById(1));
-        assertEquals("Exam with id 1 not found", exception.getMessage());
+        assertThrows(NotFoundException.class, () -> examService.findById(1));
     }
 
     @Test
-    void testUpdate() {
+    void findById_ShouldReturnExam_WhenFound() {
         when(examRepository.findById(1)).thenReturn(Optional.of(exam));
-        when(examRepository.save(any(Exam.class))).thenReturn(exam);
+        Exam foundExam = examService.findById(1);
+        assertNotNull(foundExam);
+    }
+
+    @Test
+    void update_ShouldThrowException_WhenExamNotFound() {
+        when(examRepository.findById(1)).thenReturn(Optional.empty());
+        assertThrows(NotFoundException.class, () -> examService.update(1, examDTO));
+    }
+
+    @Test
+    void update_ShouldSaveUpdatedExam_WhenFound() {
+        when(examRepository.findById(1)).thenReturn(Optional.of(exam));
+
         examService.update(1, examDTO);
+
         verify(examRepository, times(1)).save(any(Exam.class));
     }
 
     @Test
-    void testUpdateNotFound() {
-        when(examRepository.findById(1)).thenReturn(Optional.empty());
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> examService.update(1, examDTO));
-        assertEquals("Exam with id 1 not found", exception.getMessage());
-    }
-
-    @Test
-    void testFindAll() {
-        when(examRepository.findAll()).thenReturn(Arrays.asList(exam));
-        var result = examService.findAll();
-        assertNotNull(result);
-        assertEquals(1, result.size());
-    }
-
-    @Test
-    void testDelete() {
+    void delete_ShouldDeleteExam() {
         doNothing().when(examRepository).deleteById(1);
         examService.delete(1);
         verify(examRepository, times(1)).deleteById(1);
     }
 
     @Test
-    void testAddQuestion() {
-        when(examRepository.findById(1)).thenReturn(Optional.of(exam));
-        when(questionRepository.save(any(Question.class))).thenReturn(question);
-        examService.addQuestion(1, questionDTO);
-        verify(questionRepository, times(1)).save(any(Question.class));
-    }
-
-    @Test
-    void testAddQuestionExceedsLimit() {
-        exam.setQuestions(Arrays.asList(new Question(), new Question(), new Question(), new Question(), new Question()));
-        when(examRepository.findById(1)).thenReturn(Optional.of(exam));
-        ListFullException exception = assertThrows(ListFullException.class, () -> examService.addQuestion(1, questionDTO));
-        assertEquals("Exam with id 1 has a question limit of 5", exception.getMessage());
-    }
-
-    @Test
-    void testFindAllQuestionsByExamId() {
-        exam.setQuestions(Arrays.asList(question));
-        when(examRepository.findById(1)).thenReturn(Optional.of(exam));
-        var result = examService.findAllQuestionsByExamId(1);
-        assertNotNull(result);
+    void findAll_ShouldReturnListOfExams() {
+        when(examRepository.findAll()).thenReturn(List.of(exam));
+        List<Exam> result = examService.findAll();
         assertEquals(1, result.size());
+        verify(examRepository, times(1)).findAll();
     }
 
     @Test
-    void testFindAllQuestionsByExamIdNotFound() {
+    void addQuestion_ShouldThrowException_WhenExamNotFound() {
         when(examRepository.findById(1)).thenReturn(Optional.empty());
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> examService.findAllQuestionsByExamId(1));
-        assertEquals("Exam with id 1 not found", exception.getMessage());
+        QuestionDTO questionDTO = new QuestionDTO(null, null, null);
+        assertThrows(NotFoundException.class, () -> examService.addQuestion(1, questionDTO));
+    }
+
+    @Test
+    void addQuestion_ShouldThrowException_WhenExamIsFull() {
+        Exam mockExam = mock(Exam.class);
+        when(examRepository.findById(1)).thenReturn(Optional.of(mockExam));
+        when(mockExam.getQuestions()).thenReturn(List.of(new Question(), new Question()));
+        when(mockExam.getQuestionAmount()).thenReturn(2);
+
+        QuestionDTO questionDTO = new QuestionDTO(null, null, null);
+        assertThrows(ListFullException.class, () -> examService.addQuestion(1, questionDTO));
+    }
+
+    @Test
+    void findAllQuestionsByExamId_ShouldThrowException_WhenExamNotFound() {
+        when(examRepository.findById(1)).thenReturn(Optional.empty());
+        assertThrows(NotFoundException.class, () -> examService.findAllQuestionsByExamId(1));
     }
 }
